# planomat

./: Dockerfile  Dockerfile_one  LICENSE  README.md  db.sqlite3:backup  entrypoint.sh  manage.py  pyproject.toml
comparison/: admin.py  models.py  urls.py  views.py
comparison/migrations/: 0001_initial.py  0002_useranswer.py  0003_remove_useranswer_economic.py  0004_alter_useranswer_session_uuid.py  0005_answer_describtion_question_describtion.py  0006_rename_describtion_answer_description_and_more.py
comparison/templates/admin/: answers_form.html  answers_question_form.html
comparison/templates/admin/comparison/economic/: change_form.html
comparison/templates/comparison/: compare.html  economic_list.html  question.html  question_.html  question_list.html  results.html
data/: .env.template
economic_comparison/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/src/: tailwind.config.js
tests/: populate_comparison_data.py
theme/templates/: base.html  partial.html
