[tool.poetry]
name = "economic-comparison"
version = "0.1.0"
description = ""
authors = ["grischan <grischan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.7"
django-tailwind = "^3.8.0"
django-htmx = "^1.23.0"
django-environ = "^0.12.0"
gunicorn = "^23.0.0"
whitenoise = "^6.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
